--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "license": "ISC",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npx husky install"
+    "postinstall": "npx husky install",
+    "migrations": "node src/db/postgres/migrations/exec.js"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
