--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "migrations": "node src/db/postgres/migrations/exec.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "^8.47.0",
