--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
+    "start:dev": "node --watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "npx husky install",
     "migrations": "node src/db/postgres/migrations/exec.js"
