--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "start:dev": "node --watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "npx husky install",
+    "postinstall": "husky install",
     "migrations": "node src/db/postgres/migrations/exec.js"
   },
   "dependencies": {
