--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "git-commit-msg-linter": "^5.0.4",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.0",
-    "prettier": "^3.0.2"
+    "prettier": "^3.0.2",
+    "prisma": "^5.13.0"
   }
 }
