--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "migrations": "node src/db/postgres/migrations/exec.js"
   },
   "dependencies": {
+    "@prisma/client": "^5.13.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
