--- a/package.json
+++ b/package.json
@@ -8,25 +8,36 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start:dev": "node --watch index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node --env-file=.env dist/index.js",
+    "start:dev": "tsx watch index.ts",
+    "build": "tsup src/index.ts",
+    "test": "vitest run --passWithNoTests",
+    "test:watch": "vitest watch --passWithNoTests",
+    "test:ci": "vitest run --coverage --passWithNoTests",
+    "test:ui": "vitest --ui --passWithNoTests",
     "postinstall": "husky install && prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
     "bcrypt": "^5.1.1",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "validator": "^13.11.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@vitest/coverage-v8": "^1.6.0",
+    "@vitest/ui": "^1.6.0",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "git-commit-msg-linter": "^5.0.4",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.0",
     "prettier": "^3.0.2",
-    "prisma": "^5.13.0"
+    "prisma": "^5.13.0",
+    "tsup": "^8.0.2",
+    "tsx": "^4.9.1",
+    "typescript": "^5.4.5",
+    "vitest": "^1.6.0"
   }
 }
