--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "node --env-file=.env dist/index.js",
-    "start:dev": "tsx watch index.ts",
+    "start": "node dist/index.js",
+    "start:dev": "node --import tsx src/index.ts --watch",
     "build": "tsup src/index.ts",
     "test": "vitest run --passWithNoTests",
     "test:watch": "vitest watch --passWithNoTests",
