--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/validator": "^13.11.9",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
