--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vitest/ui": "^1.6.0",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-simple-import-sort": "^12.1.0",
     "git-commit-msg-linter": "^5.0.4",
     "husky": "^8.0.3",
     "lint-staged": "^14.0.0",
