--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "node dist/index.js",
-    "start:dev": "node --import tsx src/index.ts --watch",
+    "dev": "node --import tsx src/index.ts --watch",
     "build": "tsup src/index.ts",
+    "start": "node dist/index.js",
+    "lint": "eslint src --max-warnings=0",
+    "lint:check": "prettier --check src",
+    "lint:fix": "prettier --write src && eslint src --fix",
     "test": "vitest run --passWithNoTests",
     "test:watch": "vitest watch --passWithNoTests",
     "test:ci": "vitest run --coverage --passWithNoTests",
