chore: update lint script

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "node --import tsx src/index.ts --watch",
     "build": "tsup src/index.ts",
     "start": "node dist/index.js",
-    "lint": "eslint src --max-warnings=0",
-    "lint:check": "prettier --check src",
+    "lint": "prettier --check src && eslint src --max-warnings=0",
     "lint:fix": "prettier --write src && eslint src --fix",
     "test": "vitest run --passWithNoTests",
     "test:watch": "vitest watch --passWithNoTests",
