--- a/package.json
+++ b/package.json
@@ -12,35 +12,36 @@
     "test:watch": "vitest watch --passWithNoTests",
     "test:ci": "vitest run --coverage --passWithNoTests",
     "test:ui": "vitest --ui --passWithNoTests",
-    "postinstall": "husky install && prisma generate"
+    "postinstall": "husky && prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^5.13.0",
+    "@prisma/client": "^5.21.1",
     "bcrypt": "^5.1.1",
-    "express": "^4.18.2",
-    "validator": "^13.11.0",
-    "zod": "^3.22.4"
+    "express": "^4.21.1",
+    "validator": "^13.12.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
     "@types/bcrypt": "^5.0.2",
-    "@types/express": "^4.17.21",
-    "@types/validator": "^13.11.9",
-    "@typescript-eslint/eslint-plugin": "^7.8.0",
-    "@typescript-eslint/parser": "^7.8.0",
-    "@vitest/coverage-v8": "^1.6.0",
-    "@vitest/ui": "^1.6.0",
-    "eslint": "^8.47.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-simple-import-sort": "^12.1.0",
-    "git-commit-msg-linter": "^5.0.4",
-    "husky": "^8.0.3",
-    "lint-staged": "^14.0.0",
-    "prettier": "^3.0.2",
-    "prisma": "^5.13.0",
-    "tsup": "^8.0.2",
-    "tsx": "^4.9.1",
-    "typescript": "^5.4.5",
-    "vitest": "^1.6.0"
+    "@types/eslint__js": "^8.42.3",
+    "@types/express": "^5.0.0",
+    "@types/validator": "^13.12.2",
+    "@vitest/coverage-v8": "^2.1.3",
+    "@vitest/ui": "^2.1.3",
+    "eslint": "^9.13.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "git-commit-msg-linter": "^5.0.8",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
+    "prisma": "^5.21.1",
+    "tsup": "^8.3.5",
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.11.0",
+    "vitest": "^2.1.3"
   },
   "engines": {
     "node": ">=18.11.0"
