--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,7 @@
-DATABASE-URL=postgres://root:password@localhost:5432/financer
+POSTGRES_USER="root"
+POSTGRES_PASSWORD="password"
+POSTGRES_PORT="5432"
+POSTGRES_DATABASE="financer"
+POSTGRES_HOST="localhost"
+PORT="3000"
+DATABASE_URL="postgres://root:password@localhost:5432/financer"
