--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "node --import tsx src/index.ts --watch",
+    "dev": "tsx watch src/index.ts",
     "build": "tsup src/index.ts",
     "start": "node dist/index.js",
     "lint": "prettier --check src && eslint src --max-warnings=0",
@@ -15,33 +15,33 @@
     "postinstall": "husky && prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^5.21.1",
+    "@prisma/client": "^5.22.0",
     "bcrypt": "^5.1.1",
     "express": "^4.21.1",
     "validator": "^13.12.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@eslint/js": "^9.13.0",
+    "@eslint/js": "^9.15.0",
     "@types/bcrypt": "^5.0.2",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
     "@types/validator": "^13.12.2",
-    "@vitest/coverage-v8": "^2.1.3",
-    "@vitest/ui": "^2.1.3",
-    "eslint": "^9.13.0",
+    "@vitest/coverage-v8": "^2.1.5",
+    "@vitest/ui": "^2.1.5",
+    "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "git-commit-msg-linter": "^5.0.8",
-    "husky": "^9.1.6",
+    "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
-    "prisma": "^5.21.1",
+    "prisma": "^5.22.0",
     "tsup": "^8.3.5",
-    "tsx": "^4.19.1",
+    "tsx": "^4.19.2",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.11.0",
-    "vitest": "^2.1.3"
+    "typescript-eslint": "^8.15.0",
+    "vitest": "^2.1.5"
   },
   "engines": {
     "node": ">=18.11.0"
