--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch src/main.ts",
     "build": "tsup src/index.ts",
-    "start": "node dist/index.js",
+    "start": "node dist/main.js",
     "lint": "prettier --check src && eslint src --max-warnings=0",
     "lint:fix": "prettier --write src && eslint src --fix",
     "test": "vitest run --passWithNoTests",
@@ -22,6 +22,8 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
     "@eslint/js": "^9.15.0",
     "@types/bcrypt": "^5.0.2",
     "@types/eslint__js": "^8.42.3",
@@ -32,7 +34,6 @@
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "git-commit-msg-linter": "^5.0.8",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
