--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,7 @@
 {
-  "*.{js, ts}": ["npx eslint", "npx prettier --write", "npm test"]
+  "*.{js, ts}": [
+    "eslint --max-warnings=0 --fix",
+    "prettier --write",
+    "npm test"
+  ]
 }
