chore: remove root path from tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "paths": {
-      "@/*": ["./src/*"],
-      "@root/*": ["./*"]
+      "@/*": ["./src/*"]
     }
   }
 }
