--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "@eslint/js": "^9.15.0",
+    "@faker-js/faker": "^9.6.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
