chore: add configs to vitest, remove flags from test scripts

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "start": "node dist/main.js",
     "lint": "prettier --check src && eslint src --max-warnings=0",
     "lint:fix": "prettier --write src && eslint src --fix",
-    "test": "vitest run --passWithNoTests",
-    "test:watch": "vitest watch --passWithNoTests",
-    "test:ci": "vitest run --coverage --passWithNoTests",
-    "test:ui": "vitest --ui --passWithNoTests --coverage.enabled=true",
+    "test": "vitest run",
+    "test:watch": "vitest watch",
+    "test:ci": "vitest run --coverage",
+    "test:ui": "vitest --ui --coverage.enabled=true",
     "postinstall": "husky && prisma generate",
     "typecheck": "tsc --noEmit"
   },
