--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/validator": "^13.12.2",
     "@vitest/coverage-v8": "^2.1.5",
     "@vitest/ui": "^2.1.5",
+    "dotenv": "^16.5.0",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
