--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
+    "@types/supertest": "^6.0.3",
     "@types/validator": "^13.12.2",
     "@vitest/coverage-v8": "^2.1.5",
     "@vitest/ui": "^2.1.5",
@@ -42,6 +43,7 @@
     "lint-staged": "^15.2.10",
     "prettier": "^3.3.3",
     "prisma": "^5.22.0",
+    "supertest": "^7.1.1",
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "typescript": "^5.6.3",
