--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "^6.8.2",
     "bcryptjs": "^2.4.3",
     "express": "^4.21.1",
+    "swagger-ui-express": "^5.0.1",
     "validator": "^13.12.0",
     "zod": "^3.23.8"
   },
@@ -32,6 +33,7 @@
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.0",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-ui-express": "^4.1.8",
     "@types/validator": "^13.12.2",
     "@vitest/coverage-v8": "^2.1.5",
     "@vitest/ui": "^2.1.5",
