--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "ES6",
     "skipLibCheck": true,
     "types": ["vitest/globals"],
-
+    "resolveJsonModule": true,
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true,
     "strict": true,
